--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,51 @@
 body {
   background-color: teal;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 3fr;
+}
+
+.sidebar-container {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  display: grid;
+  grid-template-rows: auto 2fr;
+  color: white;
+  padding-left: 0.5rem;
+}
+
+.branding {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  column-gap: 0.75rem;
+}
+
+.dash-header {
+  font-size: 2.1rem;
+}
+
+.nav-list {
+  list-style: none;
+  display: grid;
+  grid-template-rows: repeat(10, 3.5rem);
+  padding: 0;
+}
+
+.nav-item {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  column-gap: 0.75rem;
 }
 
 .nav-item-icon {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
+  align-self: center;
+}
+
+.nav-link {
+  font-size: 2rem;
+  align-self: center;
 }
 
 .project-icon,
