--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
-  background-color: teal;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 3fr;
+  gap: 2rem;
 }
 
 .sidebar-container {
@@ -12,6 +12,7 @@ body {
   grid-template-rows: auto 2fr;
   color: white;
   padding-left: 0.5rem;
+  background-color: #3864db;
 }
 
 .branding {
@@ -48,9 +49,99 @@ body {
   align-self: center;
 }
 
-.project-icon,
-.notify-icon,
-#search-icon {
+.project-icon {
   width: 50px;
   height: 50px;
+}
+
+.header-container {
+  display: grid;
+  grid-template-rows: 4rem 6rem;
+  gap: 1rem;
+}
+
+.header-top-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
+.search-section {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  align-items: center;
+}
+
+#search-icon,
+.notify-icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+#search-input {
+  height: 2rem;
+  width: 400px;
+}
+
+.user-top {
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  justify-items: center;
+  align-items: center;
+}
+
+#user-avatar-top {
+  width: 60px;
+  height: 60px;
+}
+
+.user-name {
+  font-size: 1.5rem;
+}
+
+.user-bottom {
+  font-size: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.user-greeting {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 1rem;
+}
+
+.user-greeting > img {
+  width: 75px;
+  height: 75px;
+  align-self: center;
+}
+
+.greeting {
+  font-size: 1.5rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.greeting > p {
+  margin: 0;
+  align-self: end;
+  font-size: 1rem;
+}
+
+.header-btns {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+}
+
+.header-btn {
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
+  width: 7.25rem;
+  height: 2.5rem;
+  background-color: #3864db;
+  border: none;
+  border-radius: 1rem;
 }
