--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 4fr;
+  grid-template-rows: 1fr 5fr;
   margin-right: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Sidebar */
@@ -56,8 +57,8 @@ body {
 .header-container {
   display: grid;
   grid-template-rows: 4rem 6rem;
-  gap: 1rem;
-  margin: 1rem;
+  gap: 0.5rem;
+  padding: 1rem;
 }
 
 .header-top-container {
@@ -73,13 +74,20 @@ body {
 
 #search-icon,
 .notify-icon {
-  width: 2rem;
-  height: 2rem;
+  width: 1.75rem;
+  height: 1.75rem;
+}
+
+#search-icon {
+  justify-self: center;
 }
 
 #search-input {
-  height: 2rem;
-  width: 400px;
+  height: 1.75rem;
+  width: 500px;
+  border-radius: 1.5rem;
+  background-color: #cedde7;
+  border-style: none;
 }
 
 .user-top {
@@ -90,18 +98,19 @@ body {
 }
 
 #user-avatar-top {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
 }
 
 .user-name {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+  font-weight: 600;
 }
 
 .user-bottom {
   font-size: 2rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 3fr 2fr;
 }
 
 .user-greeting {
@@ -120,6 +129,7 @@ body {
   font-size: 1.5rem;
   display: grid;
   grid-template-rows: 1fr 1fr;
+  font-weight: 600;
 }
 
 .greeting > p {
@@ -143,11 +153,11 @@ body {
   height: 2.5rem;
   background-color: #3864db;
   border: none;
-  border-radius: 1rem;
+  border-radius: 1.25rem;
 }
 
 .main-content-container {
-  background-color: #c2c6c9;
+  background-color: #cedde7;
   display: grid;
   grid-template-columns: 2fr 1fr;
   padding: 0.5rem;
