--- a/styles.css
+++ b/styles.css
@@ -13,25 +13,27 @@ body {
   grid-row: 1 / 3;
   display: grid;
   grid-template-rows: auto 2fr;
-  color: white;
+  color: #eee;
   padding-left: 0.5rem;
-  background-color: #3864db;
+  background-color: #2f53b5;
 }
 
 .branding {
   display: grid;
   grid-template-columns: 50px 1fr;
   column-gap: 0.75rem;
+  align-items: center;
 }
 
 .dash-header {
-  font-size: 2.1rem;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 .nav-list {
   list-style: none;
   display: grid;
-  grid-template-rows: repeat(10, 3.5rem);
+  grid-template-rows: repeat(10, 3.1rem);
   padding: 0;
 }
 
@@ -42,13 +44,13 @@ body {
 }
 
 .nav-item-icon {
-  width: 30px;
-  height: 30px;
+  width: 28px;
+  height: 28px;
   align-self: center;
 }
 
 .nav-link {
-  font-size: 2rem;
+  font-size: 1.5rem;
   align-self: center;
 }
 
@@ -151,7 +153,7 @@ body {
   color: white;
   width: 7.25rem;
   height: 2.5rem;
-  background-color: #3864db;
+  background-color: #2f53b5;
   border: none;
   border-radius: 1.25rem;
 }
