--- a/styles.css
+++ b/styles.css
@@ -228,10 +228,9 @@ body {
   list-style: none;
   display: grid;
   grid-template-rows: repeat(3, 110px);
-  padding: 20px;
+  padding: 10px 30px;
   align-items: center;
   background-color: #eee;
-  margin-bottom: 0;
 }
 
 .announcement {
@@ -247,6 +246,7 @@ body {
 .announce-text {
   color: #6f6969;
   margin-top: 0;
+  margin-bottom: 0;
   font-size: 0.95rem;
 }
 
